single/k8s/02_pod_demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
  namespace: dev
spec:
  containers:
  - name: dnsutils
    image: registry.k8s.io/e2e-test-images/jessie-dnsutils:1.3
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
